# verilog-eval

./: .dockerignore  Dockerfile  Makefile.in  README.md  configurations.sh  pyproject.toml  run-local-configure.sh  run-local-make.sh  run-local-transformer.sh  run-podman-configure.sh  run-podman-llamacpp.sh  run-podman-make.sh  run-podman.sh
manual-run_llama-cpp/: constants.py  llamacpp-build.Dockerfile  manual-run.py  model-path-dict.json
manual_run/: constants.py  manual-transformer-run-batch-inference.py  manual-transformer-run.py  transformer_model.py  vllm_model.py
scripts/: sv-generate
